--- a/dogstarter.html
+++ b/dogstarter.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <a href="#main">Main</a>
                 <a href="#preparation">Preparation</a>
-                <a href="#food">Food</a>
+                <a href="#specialists">Specialists</a>
                 <a href="#vlogs">Vlogs</a>
             </ul>
             <button class="sign-up">Sign up</button>
@@ -96,16 +96,37 @@
     </div>
 </section>
 
-<section class="food-section">
-    <div class="food-image">
-        <img src="doggy eating.jpg" alt="Dog eating">
-    </div>
-    <div class="food-text">
-        <h2 id="food">Food</h2>
-        <p>
-            Proper puppy nutrition is the key to a healthy start. Puppies need food designed for their age, full of vitamins and proteins.
-            <br>We’ll help you choose between dry, wet, or natural feeding, and create a schedule that supports <br>healthy growth and energy.
-        </p>
+<section class="specialists-section">
+    <h2 id="specialists">Specialist Contacts</h2>
+    <div class="specialists-grid">
+        <div class="specialist-card">
+            <img src="vet.jpg" alt="Veterinarian">
+            <div class="specialist-info">
+                <h3>Veterinarian</h3>
+                <p>📞 +1 (555) 123-4567</p>
+            </div>
+        </div>
+        <div class="specialist-card">
+            <img src="trainer.jpg" alt="Dog Trainer">
+            <div class="specialist-info">
+                <h3>Dog Trainer</h3>
+                <p>📞 +1 (555) 234-5678</p>
+            </div>
+        </div>
+        <div class="specialist-card">
+            <img src="groomer.jpg" alt="Groomer">
+            <div class="specialist-info">
+                <h3>Groomer</h3>
+                <p>📞 +1 (555) 345-6789</p>
+            </div>
+        </div>
+        <div class="specialist-card">
+            <img src="nutritionist.jpg" alt="Nutritionist">
+            <div class="specialist-info">
+                <h3>Nutritionist</h3>
+                <p>📞 +1 (555) 456-7890</p>
+            </div>
+        </div>
     </div>
 </section>
 
